Changed deployment names

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ stages:
         artifact: 'manifests'
 - stage: Release
   jobs:  
-  - deployment: Release
+  - deployment: Release-Anders
     pool: Anders
     environment: 'test'
     strategy:
@@ -55,7 +55,7 @@ stages:
               kubernetesServiceConnection: 'KubeAnders'
               manifests: manifests/*
               containers: '$(image):$(tag)'
-  - deployment: Release
+  - deployment: Release-Nicklas
     pool: Nicklas
     environment: 'test'
     strategy:
