--- a/Consumer/Dockerfile
+++ b/Consumer/Dockerfile
@@ -17,4 +17,5 @@ RUN dotnet publish "Consumer.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY libgrpc_csharp_ext.x86.so libgrpc_csharp_ext.x86.so
 ENTRYPOINT ["dotnet", "Consumer.dll"]
