--- a/Consumer/Dockerfile
+++ b/Consumer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-alpine AS base
+FROM dreamstream/dotnetcore:3.0.0-bullseye-slim AS base
 WORKDIR /app
 EXPOSE 80
 RUN apk update && apk add --no-cache gcompat
@@ -6,13 +6,13 @@ RUN apk update && apk add --no-cache gcompat
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-alpine AS build
 WORKDIR /src
 COPY ["Consumer/Consumer.csproj", "Consumer/"]
-RUN dotnet restore "Consumer/Consumer.csproj"
+RUN dotnet restore -r linux-arm "Consumer/Consumer.csproj"
 COPY . .
 WORKDIR "/src/Consumer"
-RUN dotnet build "Consumer.csproj" -c Release -o /app/build
+RUN dotnet build "Consumer.csproj" -r linux-arm -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Consumer.csproj" -c Release -o /app/publish
+RUN dotnet publish "Consumer.csproj" -r linux-arm -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
