--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: consumer
-        image: dreamstream/consumer
+        image: dreamstream/consumer:120
         imagePullPolicy: Always
         ports:
         - containerPort: 80
