--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: consumer
   labels:
     app: consumer
+    k8s-app: prometheus
 spec:
   replicas: 1
   selector:
@@ -13,6 +14,7 @@ spec:
     metadata:
       labels:
         app: consumer
+        k8s-app: prometheus
     spec:
       containers:
       - name: consumer
