--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: consumer
   labels:
     app: consumer
-    monitor: "true"
+    k8s-app: prometheus
 spec:
   ports:
   - port: 80
