Added Kafka Consumer

--- a/Consumer/Dockerfile
+++ b/Consumer/Dockerfile
@@ -1,4 +1,4 @@
-FROM dreamstream/dotnetcore:3.0.0-bullseye-slim AS base
+FROM dreamstream/librdkafka:1.2.1-1-bullseye-slim-dotnetcore3.0.0 AS base
 WORKDIR /app
 EXPOSE 80
 
