--- a/manifests-consumergroup-test/deployment2.yaml
+++ b/manifests-consumergroup-test/deployment2.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: consumer
+  name: consumer2
   labels:
-    app: consumer
+    app: consumer2
     k8s-app: prometheus
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: consumer
+      app: consumer2
   template:
     metadata:
       labels:
-        app: consumer
+        app: consumer2
         k8s-app: prometheus
     spec:
       containers:
-      - name: consumer
+      - name: consumer2
         image: dreamstream/consumer:260
         imagePullPolicy: Always
         ports:
@@ -26,4 +26,4 @@ spec:
         - name: ASPNETCORE_ENVIRONMENT
           value: "Production"
         - name: CONSUMER_GROUP
-          value: MyConsumerGroup
+          value: MyConsumerGroup2
