Changed deserilizer in Kafka

--- a/helm/consumer-kafka/templates/deployment.yaml
+++ b/helm/consumer-kafka/templates/deployment.yaml
@@ -30,6 +30,8 @@ spec:
           value: "MyConsumerGroup-{{$v}}"
         - name: TOPIC_NAME
           value: "Topic3"
+        - name: APPLICATION_TYPE
+          value: "Kafka"
         resources:
           requests:
             memory: "500Mi"
